# PrometheusSchema

./: .gitignore  .vc.yaml  Cargo.toml  Makefile  catalog-info.yaml  example-cmds.txt
.cargo/: audit.toml
api/: Cargo.toml
api/src/: lib.rs  request.rs  response.rs  sealed.rs
api/src/metrics/: datapoint.rs  histogram.rs  metric.rs  mod.rs  value.rs
api/src/query/: mod.rs  params.rs  request.rs  response.rs
cmd/: Cargo.toml
cmd/src/: main.rs  server.rs
core/: Cargo.toml
core/src/: label.rs  lib.rs  metric.rs
expr/: Cargo.toml
expr/src/: aggregation.rs  binary.rs  duration.rs  expr.rs  expr_impl.rs  expr_spec.rs  lib.rs  param.rs  parse.rs  regex.rs  select.rs  selectors.rs
generate/: argocd.generate.yaml  kube-state-metrics.generate.yaml  kubelet-metrics-cadvisor.generate.yaml  kubelet-metrics.generate.yaml  kubelet.generate.yaml
schema/: Cargo.toml
schema/src/: digest.rs  ids.rs  lib.rs  oldschema.rs  path.rs  query.rs  schema.rs  serial.rs  tree.rs
schema/src/generate/: algo.rs  gen_old.rs  info.rs  itemname.rs  label_map.rs  labelmap.rs  labelset.rs  limited.rs  mod.rs  one_to_many.rs
schemas/: argocd.root.yaml  argocd.schema.yaml  argocd.tree.yaml  continuousc.root.yaml  continuousc.schema.yaml  go.schema.yaml  go.tree.yaml  grpc-server.tree.yaml  grpc.schema.yaml  kube-state-metrics.root.yaml  kube-state-metrics.schema.yaml  kubelet-metrics-cadvisor.schema.yaml  kubelet-metrics-probes.schema.yaml  kubelet-metrics.root.yaml  kubelet-metrics.schema.yaml  kubelet-separate.schema.yaml  kubelet.root.yaml  kubelet.schema.yaml  kubelet.tree.yaml  kubelet.yaml  process.schema.yaml  process.tree.yaml  prometheus.schema.yaml  schema.yaml  scrape.tree.yaml
