[workspace]
resolver = "2"
members = [
	"core",
	"api",
	"schema",
	"expr",
	"cmd"
	]

[patch.crates-io]
apistos = { git = "https://github.com/ContinuousC/Apistos.git", rev = "f8583845a7a7f30dccd3908577743fda673656b8", version = "0.2.5" }
schemars = { git = "https://github.com/ContinuousC/ApistosSchemaRs.git", rev = "ace307537ff7913c30f465cbfdaf70f4883618a9", version = "0.8.22" }
tsify = { git = "https://github.com/ContinuousC/Tsify.git", rev = "de64626ba4dd8a3abca8b8b2dd082334890ec60c", version = "=0.4.8" }
tsify-macros = { git = "https://github.com/ContinuousC/Tsify.git", rev = "de64626ba4dd8a3abca8b8b2dd082334890ec60c", version = "=0.4.8" }

dbschema = { git = "https://github.com/ContinuousC/DBSchema.git", tag = "dbschema_v0.1.39", version = "=0.1.39" }
dbschema-derive = { git = "https://github.com/ContinuousC/DBSchema.git", tag = "dbschema-derive_v0.1.9", version = "=0.1.9" }
graph = { git = "https://github.com/ContinuousC/Graph.git", rev = "5cbdd653af195accee6710a5c13ee19f40f1cb6f", version = "=0.1.7" }
unit = { git = "https://github.com/ContinuousC/SmartAgent.git", rev = "3a1efd89b4445613de89687a039a5c8594c9fcd5", version = "=0.1.15" }

prometheus-core = { path = "core" }
prometheus-api = { path = "api" }
prometheus-expr = { path = "expr" }
prometheus-schema = { path = "schema" }
prometheus-cmd = { path = "cmd" }
