[package]
name = "prometheus-cmd"
version = "0.1.1-acc.33"
repository = "https://github.com/ContinuousC/PrometheusSchema.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "fs", "macros"] }
clap = { version = "4.3.8", features = ["derive", "env"] }
reqwest = { version = "0.11.22", features = ["json"] }
warp = "0.3.5"
serde_yaml = "0.9.25"
serde_cbor = "0.11.2"
futures = "0.3.28"

prometheus-core = { registry = "si", version = "=0.1.2-acc.8" }
prometheus-api = { registry = "si", version = "=0.1.2-acc.21" }
prometheus-schema = { registry = "si", version = "=0.1.25-acc.23", features = [
    "tokio",
] }
serde_json = "1.0.117"
env_logger = "0.11.3"
