[package]
name = "prometheus-core"
version = "0.1.2-acc.8"
repository = "https://github.com/ContinuousC/PrometheusSchema.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tsify = ["dep:tsify", "dep:wasm-bindgen"]
schemars = ["dep:schemars"]

[dependencies]
tsify = { version = "0.4.8", optional = true }
schemars = { version = "0.8.22", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
dbschema = { version = "0.1.34", optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["chrono"] }
thiserror = "1.0.40"
