[package]
name = "prometheus-schema"
version = "0.1.25-acc.23"
repository = "https://github.com/ContinuousC/PrometheusSchema.git"
license = "Elastic-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
schemars = [
    "dep:schemars",
    "prometheus-api/schemars",
    "prometheus-core/schemars",
]
tsify = ["dep:tsify", "dep:wasm-bindgen"]
tokio = ["dep:tokio"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.29.1", features = ["fs"], optional = true }
async-recursion = "1.0.4"

[dependencies]
tsify = { registry = "si", version = "0.4.6", optional = true }
wasm-bindgen = { version = "0.2.87", optional = true }
semver = { version = "1.0.20", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["chrono"] }
schemars = { version = "0.8", optional = true }
apistos = { version = "0.2.5", optional = true }
serde_yaml = "0.9.22"
thiserror = "1.0.40"
lazy_static = "1.4.0"
itertools = "0.13"

graph = { version = "0.1.3", registry = "si" }

prometheus-core = { registry = "si", version = "=0.1.2-acc.8" }
prometheus-api = { registry = "si", version = "=0.1.2-acc.21" }
bimap = { version = "0.6.3", features = ["serde"] }
rayon = "1.10.0"
log = "0.4.22"
ring = "0.17.8"
